src/test/ui/nll/match-guards-always-borrow.ast.nll.stderr
warning[E0507]: cannot move out of borrowed content
  --> $DIR/match-guards-always-borrow.rs:13:13
   |
LL |             (|| { let bar = foo; bar.take() })();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot move out of borrowed content
   |
   = warning: this error has been downgraded to a warning for backwards compatibility with previous releases
   = warning: this represents potential undefined behavior in your code and this warning will become a hard error in the future

error: compilation successful
  --> $DIR/match-guards-always-borrow.rs:47:1
   |
LL | / fn main() {
LL | |     should_reject_destructive_mutate_in_guard();
LL | |     allow_mutate_in_arm_body();
LL | |     allow_move_into_arm_body();
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
